--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
   width: 55vw;
   max-height: 500px;
   max-width: 500px;
+  animation-name: wheel;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 .line {
@@ -49,6 +53,7 @@
   transform-origin: 50% 0%;
   right: -8.5%;
   top: 50%;
+  animation: cabins 10s ease-in-out infinite;
 }
 
 .cabin:nth-of-type(1) {
@@ -81,3 +86,34 @@
   top: 7%;
 }
 
+@keyframes wheel {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes cabins {
+  0% {
+    transform: rotate(0deg);
+    background-color: yellow;
+  }
+
+  25% {
+    background-color: yellow;
+  }
+  
+  50% {
+    background-color: purple;
+  }
+
+  75% {
+    background-color: yellow;
+  }
+
+  100% {
+    transform: rotate(-360deg);
+  }
+}
